force-app/main/default/objects/Vendor_Escalation_Contact__c/Vendor_Escalation_Contact__c.object-meta.xml
<CustomObject>
    <label>Vendor Escalation Contact</label>
    <nameField>
        <displayFormat>VEC-{0000}</displayFormat>
        <label>VEC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Escalation Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>