force-app/main/default/objects/Vendor_Escalation_Contact__c/fields/Group_Title__c.field-meta.xml
<CustomField>
    <fullName>Group_Title__c</fullName>
    <label>Group Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>